--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
+## Embedded Spring Boot Server
+server.port = 8080
 
+spring.profiles.active = @spring.profiles.active@
+
+## Database Properties
+spring.datasource.url = jdbc:mysql://localhost:3306/ServerManagement?useSSL=false&createDatabaseIfNotExist=true&zeroDateTimeBehavior=convertToNull
+spring.datasource.username = root
+spring.datasource.password = admin
+
+## Hibernate Properties
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.generate-ddl = false
+spring.jpa.hibernate.ddl-auto = none
+
+## Liquibase Properties
+spring.liquibase.change-log = classpath:db/changelog/changelog-master.xml
+logging.level.liquibase = INFO
+
+## Security Properties
+security.jwt.token.secret = SecretKey
+security.jwt.token.expiration = 300000
