Complete Server and Switch services

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ServerManagement</name>
 	<description>Server Management for Monitoring and Management of SatrapSEA's server</description>
+	<packaging>war</packaging>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -24,6 +25,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
 
 		<!-- Security + JWT -->
 
@@ -76,6 +82,8 @@
 	</dependencies>
 
 	<build>
+		<!--<finalName>${artifactId}</finalName>-->
+
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
