--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 ## Embedded Spring Boot Server
 server.port = 8080
+server.servlet.context-path=/ServerManagement
 
 spring.profiles.active = @spring.profiles.active@
 
