--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,37 @@
 ## Embedded Spring Boot Server
-server.port = 8080
+server.port=8080
 server.servlet.context-path=/ServerManagement
 
-spring.profiles.active = @spring.profiles.active@
+spring.profiles.active=@spring.profiles.active@
 
 ## Database Properties
-spring.datasource.url = jdbc:mysql://localhost:3306/ServerManagement?useSSL=false&createDatabaseIfNotExist=true&zeroDateTimeBehavior=convertToNull
-spring.datasource.username = root
-spring.datasource.password = admin
+spring.datasource.driver-class-name=net.sourceforge.jtds.jdbc.Driver
+spring.datasource.url=jdbc:jtds:sqlserver://172.45.0.60:1433/ServerManagement;createDatabaseIfNotExist=true;zeroDateTimeBehavior=convertToNull
+#spring.datasource.url=jdbc:mysql://localhost:3306/ServerManagement?useSSL=false&createDatabaseIfNotExist=true&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=sa
+spring.datasource.password=123456X
+
+spring.datasource.hikari.connection-test-query=SELECT 1
 
 ## Hibernate Properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=false
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.generate-ddl = false
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
 
 ## Liquibase Properties
-spring.liquibase.change-log = classpath:db/changelog/changelog-master.xml
-logging.level.liquibase = INFO
+spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
+logging.level.liquibase=INFO
 
 ## Security Properties
-security.jwt.token.secret = SecretKey
-security.jwt.token.expiration = 300000
+security.jwt.token.secret=SecretKey
+security.jwt.token.expiration=300000
+
+## SNMP
+server.snmp.address=127.0.0.1/161
