change token secret key, change database IP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.profiles.active=@spring.profiles.active@
 
 ## Database Properties
 spring.datasource.driver-class-name=net.sourceforge.jtds.jdbc.Driver
-spring.datasource.url=jdbc:jtds:sqlserver://172.45.0.60:1433/ServerManagement;createDatabaseIfNotExist=true;zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:jtds:sqlserver://10.43.5.62:1433/ServerManagement;createDatabaseIfNotExist=true;zeroDateTimeBehavior=convertToNull
 #spring.datasource.url=jdbc:mysql://localhost:3306/ServerManagement?useSSL=false&createDatabaseIfNotExist=true&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=sa
 spring.datasource.password=123456X
@@ -30,7 +30,7 @@ spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 logging.level.liquibase=INFO
 
 ## Security Properties
-security.jwt.token.secret=SecretKey
+security.jwt.token.secret=f23Dsie!s2dsoe23X
 security.jwt.token.expiration=300000
 
 ## SNMP
